--- a/doc/A-M_introductory_tutorial.org
+++ b/doc/A-M_introductory_tutorial.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-03-09>
+#+DATE: Time-stamp: <2020-03-16>
 #+bind: org-html-preamble-format (("en" "%d"))
 # #+OPTIONS: H:1 texht:t
 # #+BEAMER_COLOR_THEME:
@@ -23,7 +23,7 @@
 #+LANGUAGE:  en
 #+OPTIONS:   H:2 num:nil toc:nil \n:nil @:t ::t |:t ^:nil -:t f:t *:t <:t email:t
 #+OPTIONS:   TeX:t LaTeX:t skip:nil d:nil todo:t pri:nil tags:not-in-toc
-#+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
+#+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:https://orgmode.org/org-info.js
 #+LaTeX_CLASS: A-M
 #+LaTeX_CLASS_OPTIONS: [presentation,colorlinks,t]
 #+LATEX_HEADER: \usepackage{textcomp}
@@ -66,7 +66,7 @@
 # }%\hspace{.4cm}%
 # \quad%
 # #+END_export
-#   workflows with the FEA suite [[http://www.ansys.com][Ansys]].
+#   workflows with the FEA suite [[https://www.ansys.com][Ansys]].
 
 # #+BEGIN_export LaTeX
 # \pdfannot % generic annotation
@@ -104,7 +104,7 @@
 
 #+LaTeX: \\[.2cm]
 #+HTML: <br>
-   It provides an editor mode for [[http://www.gnu.org/software/emacs/][GNU Emacs]] for investigating and
+   It provides an editor mode for [[https://www.gnu.org/software/emacs/][GNU Emacs]] for investigating and
    coding APDL.  The mode offers also managing and communication
    capabilities for various Ansys processes, like interactive code
    debugging with the solver or inquiring the license manager status,
@@ -146,7 +146,7 @@
 # }%\hspace{.4cm}%
 # \quad
 # #+END_export
-  [[http://www.gnu.org/home.en.html][GNU]]-Emacs is an modern, powerful and extensible - yet free -
+  [[https://www.gnu.org/home.en.html][GNU]]-Emacs is an modern, powerful and extensible - yet free -
   editor. High quality software available for every operating system
   where Ansys is running.
 
@@ -294,7 +294,7 @@ package-install-file <RET>~ and select the downloaded tar archive.
 #+ATTR_LaTeX: :height 7cm
   [[file:variable_status.png]]
 # #+BEGIN_LaTeX
-# \href{http://www.gnu.org/software/emacs/tour/}{%
+# \href{https://www.gnu.org/software/emacs/tour/}{%
 #   \includegraphics[width=5cm]{./tour_of_Emacs.png}%
 # }
 # #+END_LaTeX
@@ -379,7 +379,7 @@ package-install-file <RET>~ and select the downloaded tar archive.
   [[./emacs_tutorial.png]]
 # #+ATTR_LaTeX: width=5cm
 #+BEGIN_LaTeX
-\href{http://www.gnu.org/software/emacs/tour/}{%
+\href{https://www.gnu.org/software/emacs/tour/}{%
   \includegraphics[width=5cm]{./tour_of_Emacs.png}%
 }
 #+END_LaTeX
@@ -467,7 +467,7 @@ package-install-file <RET>~ and select the downloaded tar archive.
 # #+ATTR_LaTeX: width=5.5cm
 # #   ,angle=90
 #+BEGIN_LaTeX
-\href{http://shop.oreilly.com/product/9780596006488.do}{%
+\href{https://shop.oreilly.com/product/9780596006488.do}{%
   \includegraphics[width=5.5cm]{./gnu_emacs.png}%
 }
 #+END_LaTeX
